Fix navigation links for local server compatibility
- Updated all navigation links to include .html extensions:
  * about -> about.html
  * spectacles -> spectacles.html
  * gallery -> gallery.html
  * contact -> contact.html
  * blog -> blog.html
  * partners -> partners.html
  * registration -> registration.html
- Enables proper navigation between pages on local Python HTTP server
- All menu items and footer links now work correctly in local development

--- a/blog-details.html
+++ b/blog-details.html
@@ -101,14 +101,14 @@
             </ul>
           </li>
           <li class="menu-item-has-children">
-            <a class="vs-svg-assets" href="about">
+            <a class="vs-svg-assets" href="about.html">
               About
               <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                 <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
               </svg>
             </a>
             <ul class="sub-menu">
-              <li><a href="about">About Us</a></li>
+              <li><a href="about.html">About Us</a></li>
               <li><a href="why-choose-us">Why Choose Us</a></li>
               <li><a href="service-details">Service Details</a></li>
             </ul>
@@ -124,8 +124,8 @@
               <li><a href="javascript:void(0)">Page List 1</a>
                 <ul>
                   <li><a href="/">Home</a></li>
-                  <li><a href="about">About Us</a></li>
-                  <li><a href="gallery">Gallery</a></li>
+                  <li><a href="about.html">About Us</a></li>
+                  <li><a href="gallery.html">Gallery</a></li>
                   <li><a href="service-details">Service Details</a></li>
                   <li><a href="team">Teachers</a></li>
                 </ul>
@@ -135,7 +135,7 @@
                   <li><a href="team-details">Single Teacher</a></li>
                   <li><a href="class">Class</a></li>
                   <li><a href="class-details">Class Details</a></li>
-                  <li><a href="blog">Blog</a></li>
+                  <li><a href="blog.html">Blog</a></li>
                   <li><a href="blog-details">Blog Details</a></li>
                   <li><a href="events">Events</a></li>
                   <li><a href="event-details">Event Details</a></li>
@@ -143,7 +143,7 @@
               </li>
               <li><a href="javascript:void(0)">Page List 3</a>
                 <ul>
-                  <li><a href="registration">Admission</a></li>
+                  <li><a href="registration.html">Admission</a></li>
                   <li><a href="shop">Shop</a></li>
                   <li><a href="shop-details">Shop Details</a></li>
                   <li><a href="auth">Auth</a></li>
@@ -156,7 +156,7 @@
                 <ul>
                   <li><a href="wishlist">Wishlist</a></li>
                   <li><a href="coming-soon">Coming Soon</a></li>
-                  <li><a href="contact">Contact Us</a></li>
+                  <li><a href="contact.html">Contact Us</a></li>
                   <li><a href="404">404 Page</a></li>
                 </ul>
               </li>
@@ -177,19 +177,19 @@
             </ul>
           </li>
           <li class="menu-item-has-children">
-            <a class="vs-svg-assets" href="blog">
+            <a class="vs-svg-assets" href="blog.html">
               blog
               <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                 <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
               </svg>
             </a>
             <ul class="sub-menu">
-              <li><a href="blog">Blog</a></li>
+              <li><a href="blog.html">Blog</a></li>
               <li><a href="blog-details">Blog Details</a></li>
             </ul>
           </li>
           <li>
-            <a class="vs-svg-assets" href="contact">
+            <a class="vs-svg-assets" href="contact.html">
               contact
               <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                 <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
@@ -461,7 +461,7 @@
                     </a>
                   </li>
                   <li>
-                    <a class="vs-svg-assets" href="about">
+                    <a class="vs-svg-assets" href="about.html">
                       À PROPOS
                       <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                         <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
@@ -469,7 +469,7 @@
                     </a>
                   </li>
                   <li>
-                    <a class="vs-svg-assets" href="spectacles">
+                    <a class="vs-svg-assets" href="spectacles.html">
                       SPECTACLES
                       <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                         <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
@@ -477,7 +477,7 @@
                     </a>
                   </li>
                   <li>
-                    <a class="vs-svg-assets" href="gallery">
+                    <a class="vs-svg-assets" href="gallery.html">
                       GALERIE
                       <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                         <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
@@ -485,7 +485,7 @@
                     </a>
                   </li>
                   <li>
-                    <a class="vs-svg-assets" href="blog">
+                    <a class="vs-svg-assets" href="blog.html">
                       BLOG
                       <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                         <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
@@ -493,7 +493,7 @@
                     </a>
                   </li>
                   <li>
-                    <a class="vs-svg-assets" href="contact">
+                    <a class="vs-svg-assets" href="contact.html">
                       CONTACT
                       <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                         <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
@@ -511,7 +511,7 @@
                 </div>
                 <div class="d-none d-xxl-inline-flex" style="display: flex; gap: 15px; align-items: center;">
                   <a href="auth" class="vs-btn-login" style="background: transparent; color: #BDCF00; border: 2px solid #BDCF00; padding: 10px 20px; border-radius: 25px; font-weight: 600; text-decoration: none; transition: all 0.3s ease; font-size: 14px;">Se connecter</a>
-                  <a href="contact" class="vs-btn"><span class="vs-btn__border"></span>Je m'inscris</a>
+                  <a href="contact.html" class="vs-btn"><span class="vs-btn__border"></span>Je m'inscris</a>
                 </div>
                 <div class="d-none d-lg-inline-flex align-items-center">
                   <button class="sideMenuToggler">
@@ -911,7 +911,7 @@
               <h4 class="sidebar-banner__title--main">our newsletter</h4>
               <input class="sidebar-banner__field" type="text" placeholder="Enter your email">
               <div class="d-flex">
-                <a href="contact" class="vs-btn sidebar-banner__btn w-100">
+                <a href="contact.html" class="vs-btn sidebar-banner__btn w-100">
                   <span class="vs-btn__border"></span>
                   admission
                 </a>
@@ -959,11 +959,11 @@
               <div class="vs-footer__menu">
                 <ul class="vs-footer__menu--list">
                   <li><a href="/">Accueil</a></li>
-                  <li><a href="about">À Propos</a></li>
-                  <li><a href="spectacles">Spectacles</a></li>
-                  <li><a href="gallery">Galerie</a></li>
-                  <li><a href="partners">Partenaires</a></li>
-                  <li><a href="contact">Contact</a></li>
+                  <li><a href="about.html">À Propos</a></li>
+                  <li><a href="spectacles.html">Spectacles</a></li>
+                  <li><a href="gallery.html">Galerie</a></li>
+                  <li><a href="partners.html">Partenaires</a></li>
+                  <li><a href="contact.html">Contact</a></li>
                 </ul>
               </div>
             </div>
@@ -1013,8 +1013,8 @@
           </div>
           <div class="col-md-auto">
             <ul class="vs-footer__bottom--menu">
-              <li><a href="about">Conditions Générales</a></li>
-              <li><a href="about">Politique de Confidentialité</a></li>
+              <li><a href="about.html">Conditions Générales</a></li>
+              <li><a href="about.html">Politique de Confidentialité</a></li>
             </ul>
           </div>
         </div>
