--- a/partners.html
+++ b/partners.html
@@ -324,7 +324,7 @@
             </a>
           </li>
           <li class="menu-item-has-children">
-            <a class="vs-svg-assets" href="about">
+            <a class="vs-svg-assets" href="about.html">
               À PROPOS
               <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                 <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
@@ -332,7 +332,7 @@
             </a>
           </li>
           <li class="menu-item-has-children">
-            <a class="vs-svg-assets" href="spectacles">
+            <a class="vs-svg-assets" href="spectacles.html">
               SPECTACLES
               <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                 <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
@@ -340,7 +340,7 @@
             </a>
           </li>
           <li class="menu-item-has-children">
-            <a class="vs-svg-assets" href="gallery">
+            <a class="vs-svg-assets" href="gallery.html">
               GALERIE
               <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                 <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
@@ -348,7 +348,7 @@
             </a>
           </li>
           <li class="menu-item-has-children">
-            <a class="vs-svg-assets" href="partners">
+            <a class="vs-svg-assets" href="partners.html">
               PARTENAIRES
               <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                 <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
@@ -356,7 +356,7 @@
             </a>
           </li>
           <li class="menu-item-has-children">
-            <a class="vs-svg-assets" href="blog">
+            <a class="vs-svg-assets" href="blog.html">
               ACTUALITÉS
               <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                 <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
@@ -364,7 +364,7 @@
             </a>
           </li>
           <li>
-            <a class="vs-svg-assets" href="contact">
+            <a class="vs-svg-assets" href="contact.html">
               CONTACT
               <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                 <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
@@ -418,7 +418,7 @@
                     </a>
                   </li>
                   <li>
-                    <a class="vs-svg-assets" href="about">
+                    <a class="vs-svg-assets" href="about.html">
                       À PROPOS
                       <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                         <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
@@ -426,7 +426,7 @@
                     </a>
                   </li>
                   <li>
-                    <a class="vs-svg-assets" href="spectacles">
+                    <a class="vs-svg-assets" href="spectacles.html">
                       SPECTACLES
                       <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                         <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
@@ -434,7 +434,7 @@
                     </a>
                   </li>
                   <li>
-                    <a class="vs-svg-assets" href="gallery">
+                    <a class="vs-svg-assets" href="gallery.html">
                       GALERIE
                       <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                         <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
@@ -442,7 +442,7 @@
                     </a>
                   </li>
                   <li>
-                    <a class="vs-svg-assets" href="partners">
+                    <a class="vs-svg-assets" href="partners.html">
                       PARTENAIRES
                       <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                         <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
@@ -450,7 +450,7 @@
                     </a>
                   </li>
                   <li>
-                    <a class="vs-svg-assets" href="blog">
+                    <a class="vs-svg-assets" href="blog.html">
                       BLOG
                       <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                         <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
@@ -458,7 +458,7 @@
                     </a>
                   </li>
                   <li>
-                    <a class="vs-svg-assets" href="contact">
+                    <a class="vs-svg-assets" href="contact.html">
                       CONTACT
                       <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                         <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
@@ -704,9 +704,9 @@
               <h3 class="vs-footer__title">Navigation</h3>
               <ul class="vs-footer__menu--list">
                 <li><a href="/">Accueil</a></li>
-                <li><a href="about">À Propos</a></li>
-                <li><a href="spectacles">Spectacles</a></li>
-                <li><a href="gallery">Galerie</a></li>
+                <li><a href="about.html">À Propos</a></li>
+                <li><a href="spectacles.html">Spectacles</a></li>
+                <li><a href="gallery.html">Galerie</a></li>
               </ul>
             </div>
           </div>
@@ -714,10 +714,10 @@
             <div class="vs-footer__widget">
               <h3 class="vs-footer__title">Services</h3>
               <ul class="vs-footer__menu--list">
-                <li><a href="partners">Partenaires</a></li>
-                <li><a href="blog">Actualités</a></li>
-                <li><a href="contact">Contact</a></li>
-                <li><a href="registration">Inscription</a></li>
+                <li><a href="partners.html">Partenaires</a></li>
+                <li><a href="blog.html">Actualités</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="registration.html">Inscription</a></li>
               </ul>
             </div>
           </div>
@@ -753,8 +753,8 @@
           </div>
           <div class="col-md-auto">
             <ul class="vs-footer__bottom--menu">
-              <li><a href="about">Conditions d'utilisation</a></li>
-              <li><a href="about">Politique de confidentialité</a></li>
+              <li><a href="about.html">Conditions d'utilisation</a></li>
+              <li><a href="about.html">Politique de confidentialité</a></li>
             </ul>
           </div>
         </div>
