--- a/404.html
+++ b/404.html
@@ -173,14 +173,14 @@
             </ul>
           </li>
           <li class="menu-item-has-children">
-            <a class="vs-svg-assets" href="about">
+            <a class="vs-svg-assets" href="about.html">
               About
               <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                 <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
               </svg>
             </a>
             <ul class="sub-menu">
-              <li><a href="about">About Us</a></li>
+              <li><a href="about.html">About Us</a></li>
               <li><a href="why-choose-us">Why Choose Us</a></li>
               <li><a href="service-details">Service Details</a></li>
             </ul>
@@ -196,8 +196,8 @@
               <li><a href="javascript:void(0)">Page List 1</a>
                 <ul>
                   <li><a href="/">Home</a></li>
-                  <li><a href="about">About Us</a></li>
-                  <li><a href="gallery">Gallery</a></li>
+                  <li><a href="about.html">About Us</a></li>
+                  <li><a href="gallery.html">Gallery</a></li>
                   <li><a href="service-details">Service Details</a></li>
                   <li><a href="team">Teachers</a></li>
                 </ul>
@@ -207,7 +207,7 @@
                   <li><a href="team-details">Single Teacher</a></li>
                   <li><a href="class">Class</a></li>
                   <li><a href="class-details">Class Details</a></li>
-                  <li><a href="blog">Blog</a></li>
+                  <li><a href="blog.html">Blog</a></li>
                   <li><a href="blog-details">Blog Details</a></li>
                   <li><a href="events">Events</a></li>
                   <li><a href="event-details">Event Details</a></li>
@@ -215,7 +215,7 @@
               </li>
               <li><a href="javascript:void(0)">Page List 3</a>
                 <ul>
-                  <li><a href="registration">Admission</a></li>
+                  <li><a href="registration.html">Admission</a></li>
                   <li><a href="shop">Shop</a></li>
                   <li><a href="shop-details">Shop Details</a></li>
                   <li><a href="auth">Auth</a></li>
@@ -228,7 +228,7 @@
                 <ul>
                   <li><a href="wishlist">Wishlist</a></li>
                   <li><a href="coming-soon">Coming Soon</a></li>
-                  <li><a href="contact">Contact Us</a></li>
+                  <li><a href="contact.html">Contact Us</a></li>
                   <li><a href="404">404 Page</a></li>
                 </ul>
               </li>
@@ -249,19 +249,19 @@
             </ul>
           </li>
           <li class="menu-item-has-children">
-            <a class="vs-svg-assets" href="blog">
+            <a class="vs-svg-assets" href="blog.html">
               blog
               <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                 <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
               </svg>
             </a>
             <ul class="sub-menu">
-              <li><a href="blog">Blog</a></li>
+              <li><a href="blog.html">Blog</a></li>
               <li><a href="blog-details">Blog Details</a></li>
             </ul>
           </li>
           <li>
-            <a class="vs-svg-assets" href="contact">
+            <a class="vs-svg-assets" href="contact.html">
               contact
               <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                 <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
