--- a/about.html
+++ b/about.html
@@ -140,14 +140,14 @@
             </ul>
           </li>
           <li class="menu-item-has-children">
-            <a class="vs-svg-assets" href="about">
+            <a class="vs-svg-assets" href="about.html">
               About
               <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                 <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
               </svg>
             </a>
             <ul class="sub-menu">
-              <li><a href="about">About Us</a></li>
+              <li><a href="about.html">About Us</a></li>
               <li><a href="why-choose-us">Why Choose Us</a></li>
               <li><a href="service-details">Service Details</a></li>
             </ul>
@@ -163,8 +163,8 @@
               <li><a href="javascript:void(0)">Page List 1</a>
                 <ul>
                   <li><a href="/">Home</a></li>
-                  <li><a href="about">About Us</a></li>
-                  <li><a href="gallery">Gallery</a></li>
+                  <li><a href="about.html">About Us</a></li>
+                  <li><a href="gallery.html">Gallery</a></li>
                   <li><a href="service-details">Service Details</a></li>
                   <li><a href="team">Teachers</a></li>
                 </ul>
@@ -174,7 +174,7 @@
                   <li><a href="team-details">Single Teacher</a></li>
                   <li><a href="class">Class</a></li>
                   <li><a href="class-details">Class Details</a></li>
-                  <li><a href="blog">Blog</a></li>
+                  <li><a href="blog.html">Blog</a></li>
                   <li><a href="blog-details">Blog Details</a></li>
                   <li><a href="events">Events</a></li>
                   <li><a href="event-details">Event Details</a></li>
@@ -182,7 +182,7 @@
               </li>
               <li><a href="javascript:void(0)">Page List 3</a>
                 <ul>
-                  <li><a href="registration">Admission</a></li>
+                  <li><a href="registration.html">Admission</a></li>
                   <li><a href="shop">Shop</a></li>
                   <li><a href="shop-details">Shop Details</a></li>
                   <li><a href="auth">Auth</a></li>
@@ -195,7 +195,7 @@
                 <ul>
                   <li><a href="wishlist">Wishlist</a></li>
                   <li><a href="coming-soon">Coming Soon</a></li>
-                  <li><a href="contact">Contact Us</a></li>
+                  <li><a href="contact.html">Contact Us</a></li>
                   <li><a href="404">404 Page</a></li>
                 </ul>
               </li>
@@ -216,19 +216,19 @@
             </ul>
           </li>
           <li class="menu-item-has-children">
-            <a class="vs-svg-assets" href="blog">
+            <a class="vs-svg-assets" href="blog.html">
               blog
               <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                 <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
               </svg>
             </a>
             <ul class="sub-menu">
-              <li><a href="blog">Blog</a></li>
+              <li><a href="blog.html">Blog</a></li>
               <li><a href="blog-details">Blog Details</a></li>
             </ul>
           </li>
           <li>
-            <a class="vs-svg-assets" href="contact">
+            <a class="vs-svg-assets" href="contact.html">
               contact
               <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                 <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
@@ -485,7 +485,7 @@
                     </a>
                   </li>
                   <li>
-                    <a class="vs-svg-assets" href="about">
+                    <a class="vs-svg-assets" href="about.html">
                       À PROPOS
                       <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                         <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
@@ -493,7 +493,7 @@
                     </a>
                   </li>
                   <li>
-                    <a class="vs-svg-assets" href="spectacles">
+                    <a class="vs-svg-assets" href="spectacles.html">
                       SPECTACLES
                       <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                         <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
@@ -501,7 +501,7 @@
                     </a>
                   </li>
                   <li>
-                    <a class="vs-svg-assets" href="gallery">
+                    <a class="vs-svg-assets" href="gallery.html">
                       GALERIE
                       <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                         <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
@@ -509,7 +509,7 @@
                     </a>
                   </li>
                   <li>
-                    <a class="vs-svg-assets" href="blog">
+                    <a class="vs-svg-assets" href="blog.html">
                       BLOG
                       <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                         <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
@@ -517,7 +517,7 @@
                     </a>
                   </li>
                   <li>
-                    <a class="vs-svg-assets" href="contact">
+                    <a class="vs-svg-assets" href="contact.html">
                       CONTACT
                       <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                         <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
@@ -709,11 +709,11 @@
             </div>
             
             <div class="cta-buttons" style="display: flex; align-items: center; gap: 20px;">
-              <a href="contact" class="vs-btn" style="background: linear-gradient(135deg, #BDCF00 0%, #7e8a01 100%); border: none; padding: 12px 30px; border-radius: 8px; color: white; text-decoration: none; font-weight: 600; display: inline-block; transition: all 0.3s ease;">
+              <a href="contact.html" class="vs-btn" style="background: linear-gradient(135deg, #BDCF00 0%, #7e8a01 100%); border: none; padding: 12px 30px; border-radius: 8px; color: white; text-decoration: none; font-weight: 600; display: inline-block; transition: all 0.3s ease;">
                 <span class="vs-btn__border"></span>
                 Nous Contacter
               </a>
-              <a href="spectacles" style="color: #7e8a01; text-decoration: none; font-weight: 600; border-bottom: 2px solid #BDCF00; padding-bottom: 2px; transition: all 0.3s ease;">
+              <a href="spectacles.html" style="color: #7e8a01; text-decoration: none; font-weight: 600; border-bottom: 2px solid #BDCF00; padding-bottom: 2px; transition: all 0.3s ease;">
                 Découvrir nos spectacles →
               </a>
             </div>
@@ -822,7 +822,7 @@
             </div>
             <hr class="vs-video__divider">
             <div class="vs-video__content">
-              <a href="contact" class="vs-btn"><span class="vs-btn__border"></span>Inscription</a>
+              <a href="contact.html" class="vs-btn"><span class="vs-btn__border"></span>Inscription</a>
               <div class="icon-call text-start">
                 <span class="icon-call__icon"><i class="fa-solid fa-phone-rotary"></i></span>
                 <div class="icon-call__content">
@@ -951,11 +951,11 @@
               <div class="vs-footer__menu">
                 <ul class="vs-footer__menu--list">
                   <li><a href="/">Accueil</a></li>
-                  <li><a href="about">À Propos</a></li>
-                  <li><a href="spectacles">Spectacles</a></li>
-                  <li><a href="gallery">Galerie</a></li>
-                  <li><a href="partners">Partenaires</a></li>
-                  <li><a href="contact">Contact</a></li>
+                  <li><a href="about.html">À Propos</a></li>
+                  <li><a href="spectacles.html">Spectacles</a></li>
+                  <li><a href="gallery.html">Galerie</a></li>
+                  <li><a href="partners.html">Partenaires</a></li>
+                  <li><a href="contact.html">Contact</a></li>
                 </ul>
               </div>
             </div>
@@ -1005,8 +1005,8 @@
           </div>
           <div class="col-md-auto">
             <ul class="vs-footer__bottom--menu">
-              <li><a href="about">Conditions Générales</a></li>
-              <li><a href="about">Politique de Confidentialité</a></li>
+              <li><a href="about.html">Conditions Générales</a></li>
+              <li><a href="about.html">Politique de Confidentialité</a></li>
             </ul>
           </div>
         </div>
