--- a/gallery.html
+++ b/gallery.html
@@ -677,11 +677,11 @@
       <div class="vs-mobile-menu">
         <ul>
           <li><a href="/">Accueil</a></li>
-          <li><a href="about">À Propos</a></li>
-          <li><a href="spectacles">Spectacles</a></li>
-          <li><a href="gallery">Galerie</a></li>
-          <li><a href="blog">Blog</a></li>
-          <li><a href="contact">Contact</a></li>
+          <li><a href="about.html">À Propos</a></li>
+          <li><a href="spectacles.html">Spectacles</a></li>
+          <li><a href="gallery.html">Galerie</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
     </div>
@@ -710,7 +710,7 @@
                     </a>
                   </li>
                   <li>
-                    <a class="vs-svg-assets" href="about">
+                    <a class="vs-svg-assets" href="about.html">
                       À PROPOS
                       <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                         <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
@@ -718,7 +718,7 @@
                     </a>
                   </li>
                   <li>
-                    <a class="vs-svg-assets" href="spectacles">
+                    <a class="vs-svg-assets" href="spectacles.html">
                       SPECTACLES
                       <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                         <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
@@ -726,7 +726,7 @@
                     </a>
                   </li>
                   <li>
-                    <a class="vs-svg-assets" href="gallery">
+                    <a class="vs-svg-assets" href="gallery.html">
                       GALERIE
                       <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                         <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
@@ -734,7 +734,7 @@
                     </a>
                   </li>
                   <li>
-                    <a class="vs-svg-assets" href="blog">
+                    <a class="vs-svg-assets" href="blog.html">
                       BLOG
                       <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                         <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
@@ -742,7 +742,7 @@
                     </a>
                   </li>
                   <li>
-                    <a class="vs-svg-assets" href="contact">
+                    <a class="vs-svg-assets" href="contact.html">
                       CONTACT
                       <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                         <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
@@ -1168,11 +1168,11 @@
               <div class="vs-footer__menu">
                 <ul class="vs-footer__menu--list">
                   <li><a href="/">Accueil</a></li>
-                  <li><a href="about">À Propos</a></li>
-                  <li><a href="spectacles">Spectacles</a></li>
-                  <li><a href="gallery">Galerie</a></li>
-                  <li><a href="partners">Partenaires</a></li>
-                  <li><a href="contact">Contact</a></li>
+                  <li><a href="about.html">À Propos</a></li>
+                  <li><a href="spectacles.html">Spectacles</a></li>
+                  <li><a href="gallery.html">Galerie</a></li>
+                  <li><a href="partners.html">Partenaires</a></li>
+                  <li><a href="contact.html">Contact</a></li>
                 </ul>
               </div>
             </div>
@@ -1222,8 +1222,8 @@
           </div>
           <div class="col-md-auto">
             <ul class="vs-footer__bottom--menu">
-              <li><a href="about">Conditions Générales</a></li>
-              <li><a href="about">Politique de Confidentialité</a></li>
+              <li><a href="about.html">Conditions Générales</a></li>
+              <li><a href="about.html">Politique de Confidentialité</a></li>
             </ul>
           </div>
         </div>
