--- a/registration.html
+++ b/registration.html
@@ -145,14 +145,14 @@
             </ul>
           </li>
           <li class="menu-item-has-children">
-            <a class="vs-svg-assets" href="about">
+            <a class="vs-svg-assets" href="about.html">
               About
               <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                 <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
               </svg>
             </a>
             <ul class="sub-menu">
-              <li><a href="about">About Us</a></li>
+              <li><a href="about.html">About Us</a></li>
               <li><a href="why-choose-us">Why Choose Us</a></li>
               <li><a href="service-details">Service Details</a></li>
             </ul>
@@ -168,8 +168,8 @@
               <li><a href="javascript:void(0)">Page List 1</a>
                 <ul>
                   <li><a href="/">Home</a></li>
-                  <li><a href="about">About Us</a></li>
-                  <li><a href="gallery">Gallery</a></li>
+                  <li><a href="about.html">About Us</a></li>
+                  <li><a href="gallery.html">Gallery</a></li>
                   <li><a href="service-details">Service Details</a></li>
                   <li><a href="team">Teachers</a></li>
                 </ul>
@@ -179,7 +179,7 @@
                   <li><a href="team-details">Single Teacher</a></li>
                   <li><a href="class">Class</a></li>
                   <li><a href="class-details">Class Details</a></li>
-                  <li><a href="blog">Blog</a></li>
+                  <li><a href="blog.html">Blog</a></li>
                   <li><a href="blog-details">Blog Details</a></li>
                   <li><a href="events">Events</a></li>
                   <li><a href="event-details">Event Details</a></li>
@@ -187,7 +187,7 @@
               </li>
               <li><a href="javascript:void(0)">Page List 3</a>
                 <ul>
-                  <li><a href="registration">Admission</a></li>
+                  <li><a href="registration.html">Admission</a></li>
                   <li><a href="shop">Shop</a></li>
                   <li><a href="shop-details">Shop Details</a></li>
                   <li><a href="auth">Auth</a></li>
@@ -200,7 +200,7 @@
                 <ul>
                   <li><a href="wishlist">Wishlist</a></li>
                   <li><a href="coming-soon">Coming Soon</a></li>
-                  <li><a href="contact">Contact Us</a></li>
+                  <li><a href="contact.html">Contact Us</a></li>
                   <li><a href="404">404 Page</a></li>
                 </ul>
               </li>
@@ -221,19 +221,19 @@
             </ul>
           </li>
           <li class="menu-item-has-children">
-            <a class="vs-svg-assets" href="blog">
+            <a class="vs-svg-assets" href="blog.html">
               blog
               <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                 <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
               </svg>
             </a>
             <ul class="sub-menu">
-              <li><a href="blog">Blog</a></li>
+              <li><a href="blog.html">Blog</a></li>
               <li><a href="blog-details">Blog Details</a></li>
             </ul>
           </li>
           <li>
-            <a class="vs-svg-assets" href="contact">
+            <a class="vs-svg-assets" href="contact.html">
               contact
               <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                 <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
@@ -506,7 +506,7 @@
                     </a>
                   </li>
                   <li>
-                    <a class="vs-svg-assets" href="about">
+                    <a class="vs-svg-assets" href="about.html">
                       À PROPOS
                       <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                         <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
@@ -514,7 +514,7 @@
                     </a>
                   </li>
                   <li>
-                    <a class="vs-svg-assets" href="spectacles">
+                    <a class="vs-svg-assets" href="spectacles.html">
                       SPECTACLES
                       <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                         <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
@@ -522,7 +522,7 @@
                     </a>
                   </li>
                   <li>
-                    <a class="vs-svg-assets" href="gallery">
+                    <a class="vs-svg-assets" href="gallery.html">
                       GALERIE
                       <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                         <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
@@ -530,7 +530,7 @@
                     </a>
                   </li>
                   <li>
-                    <a class="vs-svg-assets" href="blog">
+                    <a class="vs-svg-assets" href="blog.html">
                       BLOG
                       <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                         <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
@@ -538,7 +538,7 @@
                     </a>
                   </li>
                   <li>
-                    <a class="vs-svg-assets" href="contact">
+                    <a class="vs-svg-assets" href="contact.html">
                       CONTACT
                       <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                         <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
@@ -557,7 +557,7 @@
                 </div>
                 <div class="d-none d-xxl-inline-flex" style="display: flex; gap: 15px; align-items: center;">
                   <a href="auth" class="vs-btn-login" style="background: transparent; color: #BDCF00; border: 2px solid #BDCF00; padding: 10px 20px; border-radius: 25px; font-weight: 600; text-decoration: none; transition: all 0.3s ease; font-size: 14px;">Se connecter</a>
-                  <a href="contact" class="vs-btn"><span class="vs-btn__border"></span>Je m'inscris</a>
+                  <a href="contact.html" class="vs-btn"><span class="vs-btn__border"></span>Je m'inscris</a>
                 </div>
                 <div class="d-none d-lg-inline-flex align-items-center">
                   <button class="sideMenuToggler">
@@ -732,17 +732,17 @@
               <h3 class="vs-footer__title">Explore</h3>
               <div class="vs-footer__menu">
                 <ul class="vs-footer__menu--list">
-                  <li><a href="blog">Blog</a></li>
-                  <li><a href="about">About Us</a></li>
-                  <li><a href="contact">Contact Us</a></li>
-                  <li><a href="about">Help center</a></li>
-                  <li><a href="about">Become A Guide</a></li>
+                  <li><a href="blog.html">Blog</a></li>
+                  <li><a href="about.html">About Us</a></li>
+                  <li><a href="contact.html">Contact Us</a></li>
+                  <li><a href="about.html">Help center</a></li>
+                  <li><a href="about.html">Become A Guide</a></li>
                 </ul>
                 <ul class="vs-footer__menu--list">
-                  <li><a href="about">Join or Renew</a></li>
-                  <li><a href="about">Membership</a></li>
-                  <li><a href="about">Options</a></li>
-                  <li><a href="about">Families</a></li>
+                  <li><a href="about.html">Join or Renew</a></li>
+                  <li><a href="about.html">Membership</a></li>
+                  <li><a href="about.html">Options</a></li>
+                  <li><a href="about.html">Families</a></li>
                 </ul>
               </div>
             </div>
@@ -798,8 +798,8 @@
           </div>
           <div class="col-md-auto">
             <ul class="vs-footer__bottom--menu">
-              <li><a href="about">Terms & Conditions</a></li>
-              <li><a href="about">Privacy Policy</a></li>
+              <li><a href="about.html">Terms & Conditions</a></li>
+              <li><a href="about.html">Privacy Policy</a></li>
             </ul>
           </div>
         </div>
