--- a/spectacles.html
+++ b/spectacles.html
@@ -685,89 +685,6 @@
 		Header Area
 	==============================-->
   <header class="vs-header">
-    <div class="sticky-wrapper">
-      <div class="sticky-active">
-        <div class="container container--custom">
-          <div class="row justify-content-between align-items-center">
-            <div class="col">
-              <div class="vs-header__logo">
-                <a href="/"><img src="assets/img/edjs logo black@4x.png" alt="L'École des jeunes spectateurs" class="logo" style="height: 100px !important; width: auto !important; max-width: none !important; min-height: 100px !important;"></a>
-              </div>
-            </div>
-            <div class="col-auto">
-              <nav class="main-menu d-none d-lg-block">
-                <ul>
-                  <li>
-                    <a class="vs-svg-assets" href="/">
-                      ACCUEIL
-                      <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
-                        <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
-                      </svg>
-                    </a>
-                  </li>
-                  <li>
-                    <a class="vs-svg-assets" href="about">
-                      À PROPOS
-                      <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
-                        <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
-                      </svg>
-                    </a>
-                  </li>
-                  <li>
-                    <a class="vs-svg-assets" href="spectacles">
-                      SPECTACLES
-                      <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
-                        <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
-                      </svg>
-                    </a>
-                  </li>
-                  <li>
-                    <a class="vs-svg-assets" href="gallery">
-                      GALERIE
-                      <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
-                        <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
-                      </svg>
-                    </a>
-                  </li>
-                  <li>
-                    <a class="vs-svg-assets" href="blog">
-                      BLOG
-                      <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
-                        <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
-                      </svg>
-                    </a>
-                  </li>
-                  <li>
-                    <a class="vs-svg-assets" href="contact">
-                      CONTACT
-                      <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
-                        <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
-                      </svg>
-                    </a>
-                  </li>
-                </ul>
-              </nav>
-            </div>
-            <div class="col-auto">
-              <div class="vs-header__action">
-                <div class="d-none d-md-inline-flex align-items-center">
-                  <button class="searchBoxTggler">
-                    <i class="far fa-search"></i>
-                  </button>
-                </div>
-                <div class="d-none d-xxl-inline-flex" style="display: flex; gap: 15px; align-items: center;">
-                  <a href="auth" class="vs-btn-login" style="background: transparent; color: #BDCF00; border: 2px solid #BDCF00; padding: 10px 20px; border-radius: 25px; font-weight: 600; text-decoration: none; transition: all 0.3s ease; font-size: 14px;">Se connecter</a>
-                  <a href="https://alexpriier-cloud-hel-3u3k.bolt.host/" class="vs-btn"><span class="vs-btn__border"></span>Je m'inscris</a>
-                </div>
-                <button class="vs-menu-toggle style2 d-inline-block d-lg-none">
-                  <i class="fal fa-bars"></i>
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
   </header>
   <!-- Mobile Menu -->
   <div class="vs-menu-wrapper">
@@ -781,11 +698,11 @@
       <div class="vs-mobile-menu">
         <ul>
           <li><a href="/">ACCUEIL</a></li>
-          <li><a href="about">À PROPOS</a></li>
-          <li><a href="spectacles">SPECTACLES</a></li>
+          <li><a href="about.html">À PROPOS</a></li>
+          <li><a href="spectacles.html">SPECTACLES</a></li>
           <li><a href="schools">ÉCOLES</a></li>
           <li><a href="families">FAMILLES</a></li>
-          <li><a href="contact">CONTACT</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
         </ul>
       </div>
     </div>
@@ -822,7 +739,7 @@
                     </a>
                   </li>
                   <li>
-                    <a class="vs-svg-assets" href="about">
+                    <a class="vs-svg-assets" href="about.html">
                       À PROPOS
                       <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                         <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
@@ -830,7 +747,7 @@
                     </a>
                   </li>
                   <li>
-                    <a class="vs-svg-assets" href="spectacles">
+                    <a class="vs-svg-assets" href="spectacles.html">
                       SPECTACLES
                       <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                         <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
@@ -838,7 +755,7 @@
                     </a>
                   </li>
                   <li>
-                    <a class="vs-svg-assets" href="gallery">
+                    <a class="vs-svg-assets" href="gallery.html">
                       GALERIE
                       <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                         <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
@@ -846,7 +763,7 @@
                     </a>
                   </li>
                   <li>
-                    <a class="vs-svg-assets" href="blog">
+                    <a class="vs-svg-assets" href="blog.html">
                       BLOG
                       <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                         <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
@@ -854,7 +771,7 @@
                     </a>
                   </li>
                   <li>
-                    <a class="vs-svg-assets" href="contact">
+                    <a class="vs-svg-assets" href="contact.html">
                       CONTACT
                       <svg xmlns="http://www.w3.org/2000/svg" width="87" height="31" viewBox="0 0 87 31" fill="none">
                         <path d="M0 4.14031C0 1.87713 1.87602 0.0646902 4.13785 0.142684L83.1379 2.86682C85.2921 2.94111 87 4.70896 87 6.86445V25.0909C87 27.2642 85.2647 29.0399 83.0919 29.0898L4.09193 30.9059C1.84739 30.9575 0 29.1521 0 26.907V4.14031Z" fill="#70167E"></path>
@@ -866,7 +783,7 @@
             <div class="col-auto">
               <div class="vs-header__action">
                 <div class="d-none d-xxl-inline-flex" style="display: flex; gap: 15px; align-items: center;">
-                  <a href="auth" class="vs-btn-login" style="background: transparent; color: #BDCF00; border: 2px solid #BDCF00; padding: 10px 20px; border-radius: 25px; font-weight: 600; text-decoration: none; transition: all 0.3s ease; font-size: 14px; width: 600; text-decoration: none; transition: all 0.3s ease; font-size: 14px;">Se connecter</a>
+                  <a href="auth" class="vs-btn-login" style="background: transparent; color: #BDCF00; border: 2px solid #BDCF00; padding: 10px 20px; border-radius: 25px; font-weight: 600; text-decoration: none; transition: all 0.3s ease; font-size: 14px;">Se connecter</a>
                   <a href="https://alexpriier-cloud-hel-3u3k.bolt.host/" class="vs-btn"><span class="vs-btn__border"></span>Je m'inscris</a>
                 </div>
                 <button class="vs-menu-toggle style2 d-inline-block d-lg-none">
@@ -1676,7 +1593,7 @@
             <div class="swiper-slide wow animate__fadeInUp" data-wow-delay="0.25s">
               <div class="vs-class">
                 <div class="vs-class__figure">
-                  <a class="vs-class__figure--link" href="spectacles">
+                  <a class="vs-class__figure--link" href="spectacles.html">
                     <img class="vs-class__figure--img" src="assets/img/spectacles/charlotte.png" alt="Charlotte" style="object-fit: contain !important; padding: 10px; background: white; border-radius: 15px;">
                     <div class="vs-class__icon--wrap">
                       <span class="vs-class__icon vs-class__icon--color1">
@@ -1686,7 +1603,7 @@
                   </a>
                 </div>
                 <div class="vs-class__content">
-                  <a class="vs-class__heading--link" href="spectacles">
+                  <a class="vs-class__heading--link" href="spectacles.html">
                     <h3 class="vs-class__heading">Charlotte</h3>
                   </a>
                   <p class="vs-class__text">
@@ -1694,7 +1611,7 @@
                   </p>
                 </div>
                 <div class="vs-class__bottom">
-                  <a href="spectacles" class="vs-class__link">
+                  <a href="spectacles.html" class="vs-class__link">
                     <i class="fa-solid fa-arrow-right"></i>
                   </a>
                 </div>
@@ -1703,7 +1620,7 @@
             <div class="swiper-slide wow animate__fadeInUp" data-wow-delay="0.45s">
               <div class="vs-class">
                 <div class="vs-class__figure">
-                  <a class="vs-class__figure--link" href="spectacles">
+                  <a class="vs-class__figure--link" href="spectacles.html">
                     <img class="vs-class__figure--img" src="assets/img/spectacles/petite prince.png" alt="Le Petit Prince" style="object-fit: contain !important; padding: 10px; background: white; border-radius: 15px;">
                     <div class="vs-class__icon--wrap">
                       <span class="vs-class__icon vs-class__icon--color2">
@@ -1713,7 +1630,7 @@
                   </a>
                 </div>
                 <div class="vs-class__content">
-                  <a class="vs-class__heading--link" href="spectacles">
+                  <a class="vs-class__heading--link" href="spectacles.html">
                     <h3 class="vs-class__heading">Le Petit Prince</h3>
                   </a>
                   <p class="vs-class__text">
@@ -1721,7 +1638,7 @@
                   </p>
                 </div>
                 <div class="vs-class__bottom">
-                  <a href="spectacles" class="vs-class__link">
+                  <a href="spectacles.html" class="vs-class__link">
                     <i class="fa-solid fa-arrow-right"></i>
                   </a>
                 </div>
@@ -1730,7 +1647,7 @@
             <div class="swiper-slide wow animate__fadeInUp" data-wow-delay="0.65s">
               <div class="vs-class">
                 <div class="vs-class__figure">
-                  <a class="vs-class__figure--link" href="spectacles">
+                  <a class="vs-class__figure--link" href="spectacles.html">
                     <img class="vs-class__figure--img" src="assets/img/spectacles/tara sur la lune.png" alt="Tara Sur La Lune" style="object-fit: contain !important; padding: 10px; background: white; border-radius: 15px;">
                     <div class="vs-class__icon--wrap">
                       <span class="vs-class__icon vs-class__icon--color3">
@@ -1740,7 +1657,7 @@
                   </a>
                 </div>
                 <div class="vs-class__content">
-                  <a class="vs-class__heading--link" href="spectacles">
+                  <a class="vs-class__heading--link" href="spectacles.html">
                     <h3 class="vs-class__heading">Tara Sur La Lune</h3>
                   </a>
                   <p class="vs-class__text">
@@ -1748,7 +1665,7 @@
                   </p>
                 </div>
                 <div class="vs-class__bottom">
-                  <a href="spectacles" class="vs-class__link">
+                  <a href="spectacles.html" class="vs-class__link">
                     <i class="fa-solid fa-arrow-right"></i>
                   </a>
                 </div>
@@ -1757,7 +1674,7 @@
             <div class="swiper-slide wow animate__fadeInUp" data-wow-delay="0.85s">
               <div class="vs-class">
                 <div class="vs-class__figure">
-                  <a class="vs-class__figure--link" href="spectacles">
+                  <a class="vs-class__figure--link" href="spectacles.html">
                     <img class="vs-class__figure--img" src="assets/img/spectacles/l'eau la.png" alt="L'Eau-Là" style="object-fit: contain !important; padding: 10px; background: white; border-radius: 15px;">
                     <div class="vs-class__icon--wrap">
                       <span class="vs-class__icon vs-class__icon--color4">
@@ -1767,7 +1684,7 @@
                   </a>
                 </div>
                 <div class="vs-class__content">
-                  <a class="vs-class__heading--link" href="spectacles">
+                  <a class="vs-class__heading--link" href="spectacles.html">
                     <h3 class="vs-class__heading">L'Eau-Là</h3>
                   </a>
                   <p class="vs-class__text">
@@ -1775,7 +1692,7 @@
                   </p>
                 </div>
                 <div class="vs-class__bottom">
-                  <a href="spectacles" class="vs-class__link">
+                  <a href="spectacles.html" class="vs-class__link">
                     <i class="fa-solid fa-arrow-right"></i>
                   </a>
                 </div>
@@ -2082,11 +1999,11 @@
               <div class="vs-footer__menu">
                 <ul class="vs-footer__menu--list">
                   <li><a href="/">Accueil</a></li>
-                  <li><a href="about">À Propos</a></li>
-                  <li><a href="spectacles">Spectacles</a></li>
-                  <li><a href="gallery">Galerie</a></li>
-                  <li><a href="blog">Blog</a></li>
-                  <li><a href="contact">Contact</a></li>
+                  <li><a href="about.html">À Propos</a></li>
+                  <li><a href="spectacles.html">Spectacles</a></li>
+                  <li><a href="gallery.html">Galerie</a></li>
+                  <li><a href="blog.html">Blog</a></li>
+                  <li><a href="contact.html">Contact</a></li>
                 </ul>
               </div>
             </div>
@@ -2136,8 +2053,8 @@
           </div>
           <div class="col-md-auto">
             <ul class="vs-footer__bottom--menu">
-              <li><a href="about">Conditions Générales</a></li>
-              <li><a href="about">Politique de Confidentialité</a></li>
+              <li><a href="about.html">Conditions Générales</a></li>
+              <li><a href="about.html">Politique de Confidentialité</a></li>
             </ul>
           </div>
         </div>
